--- a/My-Trello-Clone/angular.json
+++ b/My-Trello-Clone/angular.json
@@ -24,9 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              
             ],
             "scripts": []
           },
@@ -91,8 +92,15 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.css"
+              "./src/styles.css",
+              {
+                "input": "././node_modules/bootstrap/dist/css/bootstrap.min.css"
+              },
+              {
+                "input": "././node_modules/@angular/material/prebuilt-themes/purple-green.css"
+              }
+              
+              
             ],
             "scripts": []
           }
